--- a/app/Ledger_Logistic/templates/Ledger_Logistic/invia_reclamo.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/invia_reclamo.html
@@ -10,20 +10,7 @@
 <body class="bg-gray-100 text-gray-800 font-sans">
 
 <!-- NAVBAR -->
-<nav class="bg-white shadow-md fixed w-full z-10">
-    <div class="max-w-7xl mx-auto px-4">
-        <div class="flex justify-between h-16 items-center">
-            <a href="{% url 'dashboard_cliente' %}"
-               class="text-2xl font-bold text-blue-700 uppercase tracking-wide">
-                Dashboard Cliente
-            </a>
-            <a href="{% url 'logout' %}"
-               class="bg-red-600 text-white px-4 py-2 rounded-lg hover:bg-red-700 font-semibold">
-                Logout
-            </a>
-        </div>
-    </div>
-</nav>
+{% include 'Ledger_Logistic/navbar.html'%}
 
 <!-- CONTENUTO -->
 <div class="pt-24 pb-12 px-4">
