--- a/app/Ledger_Logistic/templates/Ledger_Logistic/servizi.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/servizi.html
@@ -14,7 +14,7 @@
                 <div class="flex items-center">
                     <a href="{% url 'home' %}" class="text-2xl font-bold text-blue-700 uppercase tracking-wider">
                         <svg class="w-8 h-8 inline-block mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path></svg>
-                        {{ company_name }}
+                        LEDGER LOGISTIC
                     </a>
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
