--- a/app/Ledger_Logistic/templates/Ledger_Logistic/invia_reclamo.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/invia_reclamo.html
@@ -51,20 +51,14 @@
             <!-- TIPO RECLAMO -->
             <div class="mb-6">
                 <label class="block text-sm font-semibold mb-2">
-                    Motivo del reclamo
+                    Tipo di reclamo
                 </label>
-                <select name="tipo" required
+                <select name="nomeReclamo" required
                         class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500">
-                    <option value="">Seleziona un motivo</option>
-                    <option value="spedizione effettuata con successo">
-                        spedizione effettuata con successo
-                    </option>
-                    <option value="pagamento ricevuto con successo">
-                        pagamento ricevuto con successo
-                    </option>
-                    <option value="ritardo di consegna">
-                        ritardo di consegna
-                    </option>
+                    <option value="">Seleziona un tipo di reclamo</option>
+                    <option value="Spedizione non effettuata correttamente">Spedizione non effettuata correttamente</option>
+                    <option value="Verifica pagamento">Verifica pagamento</option>
+                    <option value="Ritardo di consegna">Ritardo di consegna</option>
                 </select>
             </div>
 
