--- a/app/Ledger_Logistic/templates/Ledger_Logistic/invia_reclamo.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/invia_reclamo.html
@@ -44,7 +44,7 @@
                         class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500">
                     <option value="">Seleziona un tipo di reclamo</option>
                     <option value="Spedizione non effettuata correttamente">Spedizione non effettuata correttamente</option>
-                    <option value="Verifica pagamento">Verifica pagamento</option>
+                    <!--<option value="Verifica pagamento">Verifica pagamento</option> -->
                     <option value="Ritardo di consegna">Ritardo di consegna</option>
                 </select>
             </div>
