--- a/app/Ledger_Logistic/templates/Ledger_Logistic/invia_reclamo.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/invia_reclamo.html
@@ -54,7 +54,7 @@
                 <label class="block text-sm font-semibold mb-2">
                     Descrizione del reclamo
                 </label>
-                <textarea name="descrizione" rows="5" required
+                <textarea name="descrizione" rows="5" required maxlenght="500"
                           class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500"
                           placeholder="Descrivi in modo dettagliato il problema riscontrato..."></textarea>
             </div>
