Fix pagina di pagamento e pulizia rotte

--- a/app/Ledger_Logistic/templates/Ledger_Logistic/crea_spedizione.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/crea_spedizione.html
@@ -431,7 +431,7 @@
 
                 if (paymentIntent.status === 'succeeded') {
                     const csrftoken = getCookie('csrftoken');
-                    fetch('{% url "conferma_pagamento" %}', {
+                    fetch('{% url "conferma_pagamento_stripe" %}', {
                         method: 'POST',
                         headers: {
                             'X-CSRFToken': csrftoken,
