--- a/app/Ledger_Logistic/templates/Ledger_Logistic/navbar.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/navbar.html
@@ -9,7 +9,10 @@
                     </a>
                 </div>
                 <div class="hidden md:flex items-center space-x-8">
-                    <a href="{% url 'dashboard_gestore' %}" class="text-blue-700 hover:text-blue-900 font-semibold">Dashboard</a>
+                    
+                    <a href="{% url 'dashboard_gestore' %}" class="text-blue-700 hover:text-blue-900 font-semibold">
+                        <button class="px-4 py-2 font-semibold text-blue-700 border border-blue-700 rounded-lg transition-all duration-300 ease-in-out hover:bg-blue-700 hover:text-white hover:shadow-lg hover:-translate-y-0.5 active:translate-y-0 active:shadow-md focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-2">Dashboard</button>
+                    </a>
                     <span class="text-gray-600 font-medium">Ciao, {{ user.first_name|default:user.username }}</span>
                     <a href="{% url 'logout' %}" class="bg-red-600 text-white px-4 py-2 rounded-md hover:bg-red-700 transition">Logout</a>
                 </div>
