--- a/app/Ledger_Logistic/templates/Ledger_Logistic/dashboard_corriere.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/dashboard_corriere.html
@@ -276,7 +276,7 @@
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6"></path>
                                 </svg>
                             </div>
-                            <label class="text-lg font-semibold text-gray-800">Condizioni Traffico</label>
+                            <div class="text-lg font-semibold text-gray-800">Condizioni Traffico</div>
                         </div>
                         <div class="flex space-x-4">
                             <label class="flex-1 cursor-pointer">
@@ -306,7 +306,7 @@
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16V6a1 1 0 00-1-1H4a1 1 0 00-1 1v10a1 1 0 001 1h1m8-1a1 1 0 01-1 1H9m4-1V8a1 1 0 011-1h2.586a1 1 0 01.707.293l3.414 3.414a1 1 0 01.293.707V16a1 1 0 01-1 1h-1m-6-1a1 1 0 001 1h1M5 17a2 2 0 104 0m-4 0a2 2 0 114 0m6 0a2 2 0 104 0m-4 0a2 2 0 114 0"></path>
                                 </svg>
                             </div>
-                            <label class="text-lg font-semibold text-gray-800">Stato Veicolo</label>
+                            <div class="text-lg font-semibold text-gray-800">Stato Veicolo</div>
                         </div>
                         <div class="flex space-x-4">
                             <label class="flex-1 cursor-pointer">
@@ -335,7 +335,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 15a4.5 4.5 0 0 0 4.5 4.5H18a3.75 3.75 0 0 0 1.332-7.257 3 3 0 0 0-3.758-3.848 5.25 5.25 0 0 0-10.233 2.33A4.502 4.502 0 0 0 2.25 15Z" />
                                 </svg>
                             </div>
-                            <label class="text-lg font-semibold text-gray-800">Stato Meteo</label>
+                            <div class="text-lg font-semibold text-gray-800">Stato Meteo</div>
                         </div>
                         <div class="flex space-x-4">
                             <label class="flex-1 cursor-pointer">
