--- a/app/Ledger_Logistic/templates/Ledger_Logistic/reset_password.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/reset_password.html
@@ -265,7 +265,7 @@
         
         function validateEmail(email) {
             // Regex per validare email: deve avere @ e dominio valido
-            const emailRegex = /^[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}$/;
+            const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
             return emailRegex.test(email);
         }
         
@@ -291,10 +291,10 @@
                 
                 if (!email.includes('@')) {
                     showEmailError('L\'email deve contenere il simbolo @');
-                } else if (!validateEmail(email)) {
-                    showEmailError('Inserisci un indirizzo email valido (es: utente@dominio.com)');
-                } else {
+                } else if (validateEmail(email)) {
                     hideEmailError();
+                } else {
+                    showEmailError('Inserisci un indirizzo email valido (es: utente@dominio.com)');
                 }
             });
             
