--- a/app/Ledger_Logistic/templates/Ledger_Logistic/register.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/register.html
@@ -457,7 +457,7 @@
         const emailError = document.getElementById('emailError');
         
         function validateEmail(email) {
-            const emailRegex = /^[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}$/;
+            const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
             return emailRegex.test(email);
         }
         
@@ -483,10 +483,10 @@
                 
                 if (!email.includes('@')) {
                     showEmailError('L\'email deve contenere il simbolo @');
-                } else if (!validateEmail(email)) {
-                    showEmailError('Inserisci un indirizzo email valido (es: utente@dominio.com)');
-                } else {
+                } else if (validateEmail(email)) {
                     hideEmailError();
+                } else {
+                    showEmailError('Inserisci un indirizzo email valido (es: utente@dominio.com)');
                 }
             });
         }
@@ -544,7 +544,7 @@
                 length: password.length >= 8,
                 uppercase: /[A-Z]/.test(password),
                 lowercase: /[a-z]/.test(password),
-                number: /[0-9]/.test(password),
+                number: /\d/.test(password),
                 special: /[!@#$%^&*(),.?":{}|<>+]/.test(password)
             };
             
