--- a/app/Ledger_Logistic/templates/Ledger_Logistic/gestione_reclami.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/gestione_reclami.html
@@ -55,6 +55,7 @@
                         <tr>
                             <th class="px-6 py-3 text-left text-xs font-semibold text-gray-600 uppercase">Ordine</th>
                             <th class="px-6 py-3 text-left text-xs font-semibold text-gray-600 uppercase">Cliente</th>
+                            <th class="px-6 py-3 text-left text-xs font-semibold text-gray-600 uppercase">Tipologia</th>
                             <th class="px-6 py-3 text-left text-xs font-semibold text-gray-600 uppercase">Motivo</th>
                             <th class="px-6 py-3 text-left text-xs font-semibold text-gray-600 uppercase">Stato</th>
                             <th class="px-6 py-3 text-right text-xs font-semibold text-gray-600 uppercase">Azioni</th>
@@ -69,6 +70,9 @@
                             </td>
                             <td class="px-6 py-4 text-gray-700">
                                 {{ reclamo.spedizione.cliente.username }}
+                            </td>
+                            <td class="px-6 py-4 text-gray-700">
+                                {{ reclamo.evento.nomeEvento}}
                             </td>
                             <td class="px-6 py-4 text-gray-600">
                                 {{ reclamo.descrizione }}
