--- a/app/Ledger_Logistic/templates/Ledger_Logistic/decisione_reclamo_gestore.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/decisione_reclamo_gestore.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="font-sans text-gray-800 bg-gray-50">
-    
+{% csrf_token %}
 {% include 'Ledger_Logistic/navbar.html'%}
 
 <!-- Main -->
@@ -67,8 +67,19 @@
                 <!-- Esito -->
                 <div>
                     <p class="text-sm text-gray-500">Esito verifica</p>
+                    {% if reclamo.esito == "Non verificato" %}
+                        <span id="esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-gray-50 text-gray-700 border border-gray-200">
+                        {{ reclamo.esito }}
+                    {% elif reclamo.esito == "Valido" %}
                         <span id="esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-green-50 text-green-700 border border-green-200">
-                            {{ reclamo.esito }}
+                        ✅ {{ reclamo.esito }}
+                    {% elif reclamo.esito == "Invalido" %}
+                        <span id="esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-red-50 text-red-700 border border-red-200">
+                        ❌ {{ reclamo.esito }}
+                    {% else %}
+                        <span id="esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-yellow-50 text-yellow-700 border border-yellow-200">
+                        ⚠️ Errore
+                    {% endif %}
                 </div>
 
                 <!-- ID Reclamo -->
@@ -97,11 +108,16 @@
                    class="px-5 py-2 text-sm font-semibold rounded-md bg-gray-100 text-gray-700 hover:bg-gray-200 transition">
                     Torna indietro
                 </a>
-
-                <button id="verifica_reclamo_btn" class="px-5 py-2 text-sm font-semibold rounded-md bg-blue-600 text-white hover:bg-blue-700 transition shadow">
+                
+                <!-- Se la verifica è già stata fatta, il bottone è bloccato -->
+                <button id="verifica_reclamo_btn" {%if reclamo.esito == "Nsdon verificato" %} class="px-5 py-2 text-sm font-semibold rounded-md bg-blue-600 text-white hover:bg-blue-700 transition shadow">
                     Verifica reclamo
-            </button>
-
+                </button>
+                {%else%} 
+                <button id="verifica_reclamo_btn" class="px-5 py-2 text-sm font-semibold rounded-md bg-gray-600 text-white hover:bg-gray-700 transition shadow" disabled>
+                    Verifica già effettuata
+                </button> 
+                {%endif%}
             </div>
 
         </div>
@@ -119,30 +135,28 @@
 </body>
 </html>
 
-<script src="jquery.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script>
-    
 $(document).ready(function () {
-
     $('#verifica_reclamo_btn').click(function (event) {
         event.preventDefault();
 
-        const reclamoId = {{ reclamo.id }};
-
+        // Qui chiamiamo la rotta che chiama la funzione di verifica del reclamo, la quale ci restituirà un esito e la probabilità
         $.ajax({
-            url: {% url ''%},  // URL Django
-            type: 'GET',
+            url: "{% url 'verifica_reclamo' %}",
+            type: 'POST',
+             headers : {
+            'X-CSRFToken' : "{{ csrf_token }}"
+            },
             data: {
-                reclamo_id: reclamoId
+                reclamo_id: {{ reclamo.id }}
             },
             success: function (response) {
                 const esitoVerifica = $('#esito_verifica');
 
                 esitoVerifica.text(response.esito);
-
-                esitoVerifica
-                    .removeClass('bg-gray-100 text-gray-500 bg-green-50 text-green-700 bg-red-50 text-red-700 border-green-200 border-red-200')
-                    .addClass(response.css_class);
+                esitoVerifica.removeClass();
+                esitoVerifica.addClass("inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-green-50 text-green-700 border border-green-200");
             },
             error: function () {
                 $('#esito_verifica')
@@ -154,4 +168,6 @@ $(document).ready(function () {
     });
 
 });
+
+</script>
     
