--- a/app/Ledger_Logistic/templates/Ledger_Logistic/decisione_reclamo_gestore.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/decisione_reclamo_gestore.html
@@ -74,7 +74,7 @@
                         <span id="esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-green-50 text-green-700 border border-green-200">
                         ✅ {{ reclamo.esito }}
                     {% elif reclamo.esito == "Non valido" %}
-                        <span id="esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-red-50 text-red-700 border border-red-200">
+                        <span id="prob_esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-red-50 text-red-700 border border-red-200">
                         ❌ {{ reclamo.esito }}
                     {% else %}
                         <span id="esito_verifica" class="inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-yellow-50 text-yellow-700 border border-yellow-200">
@@ -99,6 +99,20 @@
                 <p class="text-gray-700 leading-relaxed">
                     {{ reclamo.descrizione }}
                 </p>
+            </div>
+
+            <!-- Selezione valore booleano della verifica -->
+            <div class="p-6 flex justify-end gap-4">
+                
+                <label>
+                    <input type="radio" name="boolReclamo" value="true" checked>
+                    Reclamo vero 
+                    </label>
+                
+                <label> 
+                    <input type="radio" name="boolReclamo" value="false">
+                    Reclamo falso 
+                </label>
             </div>
 
             <!-- Azioni -->
@@ -142,6 +156,14 @@ $(document).ready(function () {
         event.preventDefault();
         const buttonVerifica = $('#verifica_reclamo_btn');
         buttonVerifica.text("Verifica in corso...");
+
+        let dots = 0;
+        dotsInterval = setInterval(function() {
+            dots = (dots + 1) % 4; // 0,1,2,3
+            buttonVerifica.text("Verifica in corso" + ".".repeat(dots));
+        }, 500); // cambia ogni 500ms
+        buttonVerifica.prop("disabled", true);
+        sceltaUtente = $("input[name='boolReclamo']:checked").val();
         // Qui chiamiamo la rotta che chiama la funzione di verifica del reclamo, la quale ci restituirà un esito e la probabilità
         $.ajax({
             url: "{% url 'verifica_reclamo' %}",
@@ -150,21 +172,33 @@ $(document).ready(function () {
             'X-CSRFToken' : "{{ csrf_token }}"
             },
             data: {
-                reclamo_id: {{ reclamo.id }}
+                reclamo_id: {{ reclamo.id }},
+                boolReclamo: sceltaUtente
             },
             success: function (response) {
                 const esitoVerifica = $('#esito_verifica');
-                
-                esitoVerifica.text(response.esito);
-                esitoVerifica.removeClass();
-                esitoVerifica.addClass("inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-green-50 text-green-700 border border-green-200");
+                // Ferma la funzione dei puntini sul bottone di verifica
+                    clearInterval(dotsInterval);
 
+                if (response.esito == "Valido"){
+                    esitoVerifica.text(response.esito);
+                    esitoVerifica.removeClass();
+                    esitoVerifica.addClass("inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-green-50 text-green-700 border border-green-200");
+                    esitoVerifica.after('<span id="probabilita" class="ml-2 text-sm text-gray-600  font-bold">Probabilità: ' + response.probabilita +'%' + '</span>');
+                } else {
+                    esitoVerifica.text(response.esito);
+                    esitoVerifica.removeClass();
+                    esitoVerifica.addClass("inline-flex px-3 py-1 mt-1 rounded-full text-sm font-semibold bg-red-50 text-red-700 border border-red-200");
+                    esitoVerifica.after('<span id="probabilita" class="ml-2 text-sm text-gray-600 font-bold">Probabilità: ' + response.probabilita +'%' + '</span>');
+                }
+                
                 buttonVerifica.removeClass();
                 buttonVerifica.addClass("px-5 py-2 text-sm font-semibold rounded-md bg-gray-600 text-white hover:bg-gray-700 transition shadow");
                 buttonVerifica.attr('disabled', true);
                 buttonVerifica.text('Verifica effettuata');
             },
             error: function () {
+                clearInterval(dotsInterval);
                 $('#esito_verifica')
                     .text('Errore nella verifica')
                     .removeClass()
