Fix vari pagine e spostato footer in un template

--- a/app/Ledger_Logistic/templates/Ledger_Logistic/dettaglio_spedizione.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/dettaglio_spedizione.html
@@ -109,18 +109,12 @@
                class="px-6 py-2 rounded-lg bg-blue-600 text-white hover:bg-blue-400 font-semibold">
                 Torna alla lista
             </a>
-
         </div>
-
     </div>
 </div>
 
 <!-- Footer -->
-<footer class="bg-gray-900 text-gray-400 py-8 mt-12">
-    <div class="max-w-7xl mx-auto text-center">
-        <p>&copy; 2025 LEDGER LOGISTIC. Tutti i diritti riservati.</p>
-    </div>
-</footer>
+{% include 'Ledger_Logistic/footer.html'%}
 
 </body>
 </html>
