--- a/app/Ledger_Logistic/templates/Ledger_Logistic/assegna_spedizioni.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/assegna_spedizioni.html
@@ -97,11 +97,7 @@
 </div>
 
 <!-- Footer -->
-<footer class="bg-gray-900 text-gray-400 py-8 mt-12">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-        <p>&copy; 2025 {{ company_name }}. Tutti i diritti riservati.</p>
-    </div>
-</footer>
+{% include 'Ledger_Logistic/footer.html'%}
 
 </body>
 </html>
