--- a/app/Ledger_Logistic/templates/Ledger_Logistic/contatti.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/contatti.html
@@ -238,11 +238,7 @@
         </div>
     </section>
 
-    <footer class="bg-gray-900 text-gray-400 py-12">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <p>&copy; 2025 LEDGER LOGISTIC. Tutti i diritti riservati.</p>
-        </div>
-    </footer>
+{% include 'Ledger_Logistic/footer.html'%}
 
 </body>
 </html>
