--- a/app/Ledger_Logistic/templates/Ledger_Logistic/crea_spedizione.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/crea_spedizione.html
@@ -312,11 +312,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="bg-gray-900 text-gray-400 py-8 mt-12">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
-            <p>&copy; 2025 LEDGER LOGISTIC. Tutti i diritti riservati.</p>
-        </div>
-    </footer>
+{% include 'Ledger_Logistic/footer.html'%}
 
     <!-- Configurazione Stripe e pagamento tramite data attributes -->
     <div id="stripe-config"
