--- a/app/Ledger_Logistic/templates/Ledger_Logistic/decisione_reclamo_gestore.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/decisione_reclamo_gestore.html
@@ -134,11 +134,7 @@
 
 
 <!-- Footer -->
-<footer class="bg-gray-900 text-gray-400 py-8 mt-12">
-    <div class="max-w-7xl mx-auto text-center">
-        <p>&copy; 2025 LEDGER LOGISTIC. Tutti i diritti riservati.</p>
-    </div>
-</footer>
+{% include 'Ledger_Logistic/footer.html'%}
 
 </body>
 </html>
@@ -146,9 +142,8 @@
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script>
 $(document).ready(function () {
-    if({{reclamo.risolto|yesno:"true,false" }}){
-        
 
+    if({{reclamo.risolto|yesno:"true,false" }}){
         const esitoVerifica = $('#esito_verifica');
         esitoVerifica.after('<span id="label_calcolo" class="ml-2 text-sm text-gray-600 font-bold">Calcolo delle probabilità in corso' + '</span>');
         let dots = 0;
