--- a/app/Ledger_Logistic/templates/Ledger_Logistic/gestione_reclami.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/gestione_reclami.html
@@ -104,11 +104,7 @@
 </div>
 
 <!-- Footer -->
-<footer class="bg-gray-900 text-gray-400 py-8 mt-12">
-    <div class="max-w-7xl mx-auto text-center">
-        <p>&copy; 2025 LEDGER LOGISTIC. Tutti i diritti riservati.</p>
-    </div>
-</footer>
+{% include 'Ledger_Logistic/footer.html'%}
 
 </body>
 </html>
