--- a/app/Ledger_Logistic/templates/Ledger_Logistic/home.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/home.html
@@ -152,10 +152,7 @@
                 </ul>
             </div>
         </div>
-        <div class="border-t border-gray-800 mt-12 pt-8 text-center text-sm">
-            &copy; 2026 LEDGER LOGISTIC. Tutti i diritti riservati.
-        </div>
-    </footer>
+{% include 'Ledger_Logistic/footer.html'%}
 
 </body>
 </html>
