--- a/app/Ledger_Logistic/templates/Ledger_Logistic/invia_reclamo.html
+++ b/app/Ledger_Logistic/templates/Ledger_Logistic/invia_reclamo.html
@@ -75,11 +75,7 @@
 </div>
 
 <!-- FOOTER -->
-<footer class="bg-gray-900 text-gray-400 py-8 mt-12">
-    <div class="max-w-7xl mx-auto px-4 text-center">
-        <p>&copy; 2025 – Tutti i diritti riservati</p>
-    </div>
-</footer>
+{% include 'Ledger_Logistic/footer.html'%}
 
 </body>
 </html>
